# cram-engine-mineru

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  design-spec.md
.opencode/commands/: cram.md
.trae/rules/: project_rules.md
app/: README.md
app/backend/: build-sidecar.ps1  cram.py  main.py  pyinstaller.spec  requirements.txt  sidecar_main.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/tauri/: package-lock.json  package.json
app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri/src-tauri/src/: main.rs
assets/: architecture.md  demo-script.md  readme-header.md  social-copy.md
configs/: example.yaml
docs/manual-tests/: codex-like-app.md
docs/plans/: 2026-06-13-local-upload-start-design.md  2026-06-13-mineru-material-ingest.md  (+6 more)
scripts/: convert-ppt-to-pdf.ps1  cram.cmd.template  ingest_materials.py  install-cram-command.ps1  install-skill.ps1
stages/: stage0-ingest.md
tests/: test_agent_support.py  test_api_contract.py  test_app_ingest.py  test_app_structure.py  test_artifacts.py  test_chunks.py  test_convert_ppt_to_pdf.py  test_cram_chat.py  test_cram_command_install.py  test_desktop_app_docs.py  test_docs_contract.py  test_ingest_materials.py  test_install_skill.py  test_llm_client.py  test_llm_settings.py  test_mathtext.py  test_mindmap.py  test_mindmap_artifact.py  test_retrieval.py  test_subject_storage.py  test_teaching.py  test_tui_app_contract.py  test_tui_commands.py  test_tui_docs.py  test_tui_memory.py  test_tui_workspace.py  test_workspace_index.py  test_workspace_ingest.py
(+33 files in other folders)
